[project]
name = "g-bert-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "Romail Khan",email = "rkhan307@gatech.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "dill (>=0.3.9,<0.4.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tensorboardx (>=2.6.2.2,<3.0.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch-geometric (>=2.6.1,<3.0.0)",
    "transformers (>=4.50.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
